# cISM

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac
.github/workflows/: c.yml  cmake.yml
cism-0.1/: Makefile.am  configure  configure.ac
cism-0.1/src/: errorHandling.c  organization.c
src/: CMakeLists.txt  algorithm.c  cismMPI.c  errorHandling.h  fileInterface.c  fileInterface.h  io.c  main.c  organization.c  organization.h
src/headers/: algorithm.h  cismMPI.h  fileInterface.h  organization.h
